# oscar-spatial-index-compare

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: main.cpp  mainc.cpp  mainq.cpp
include/hic/: GeoHierarchyHCQRCompleter.h  HCQRCompleter.h  HcqrOpTree.h  HtmCqr.h  HtmSpatialGrid.h  OscarSearchSgIndex.h  OscarSearchWithSg.h  OscarSgIndex.h  S2GeomSpatialGrid.h  static-htm-index.h
src/: GeoHierarchyHCQRCompleter.cpp  GeoHierarchyHCQRCompleter.h  GeoHierarchySpatialGrid.cpp  GeoHierarchySpatialGrid.h  H3SpatialGrid.cpp  H3SpatialGrid.h  HCQR.cpp  HCQR.h  HCQRCompleter.cpp  HCQRCompleter.h  HCQRIndex.h  HCQRIndexCompactifying.cpp  HCQRIndexCompactifying.h  HCQRIndexFromCellIndex.cpp  HCQRIndexFromCellIndex.h  HCQRIndexMakeStatic.cpp  HCQRIndexMakeStatic.h  HCQRIndexWithCache.cpp  HCQRIndexWithCache.h  HCQRSpatialGrid.cpp  HCQRSpatialGrid.h  HcqrOpTree.cpp  HcqrOpTree.h  HtmSpatialGrid.cpp  HtmSpatialGrid.h  OscarSearchSgIndex.cpp  OscarSearchSgIndex.h  OscarSearchWithSg.cpp  OscarSearchWithSg.h  OscarSgIndex.cpp  OscarSgIndex.h  S2GeomSpatialGrid.cpp  S2GeomSpatialGrid.h  SimpleGridSpatialGrid.cpp  SimpleGridSpatialGrid.h  SpatialGrid.cpp  SpatialGrid.h  SpatialGridInitializer.cpp  StaticHCQRSpatialGrid.cpp  StaticHCQRSpatialGrid.h  (+9 more)
